# PythonProject1

./: README.md  model_and_evaluation.py  power_consumption.ipynb  pyproject.toml  streamlit_part.py
